code/LoadBalancerService.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: LoadBalancer
  selector:
    app: ev3-peach
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
