code/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host: ev3.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ev3-service
            port:
              number: 80
  - host: ev3_2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ev3_2-service
            port:
              number: 80
